
{{$NEXT}}

1.20160612 2016-06-11 America/Los_Angeles

1.20150908 2015-09-08 America/Los_Angeles

 - Optionally log sending of reports to syslog

1.20150527 2015-05-26 America/Los_Angeles

 - check for an updated PSL file and load if necessary
 - handle domains with missing rua/ruf
 - add timeout to sending script

1.20150317 2015-03-17 America/Los_Angeles

 - squash subdomains w/o DMARC records into parent report (#59)
 - add batch reporting (suppress throttling until...)
 - align reports with hour/UTC day
 - swap git contributors plugin

1.20150310 2015-03-10 America/Los_Angeles
 - lower case domain names at entry points (resolves #53)
 - tolerate substitution of = with : in DMARC DNS rec

1.20150228 2015-02-27 America/Los_Angeles

 - fix the policy_evaluated fields in outbound reports
 - accommodate a common DMARC error substiting = with :
 - initialized config file first (was non-deterministic)
 - tolerate missing SPF auth type scope

1.20150222 2015-02-22 America/Los_Angeles

 - remove ./mail-dmarc.ini (sample in share/mail-dmarc.ini)
 - load PSL before dmarc_httpd forks, so we only load it once
 - quieter report sending output unless --verbose

1.20150211 2015-02-10 America/Los_Angeles

 - optionally DKIM sign sent reports
 - warn when DMARC record format is invalid
 - accept callbacks (lazy eval) for SPF & DKIM results
 - make the report record building consistent for eval and reporting
 - rewrite DKIM result invalid -> temperror
 - capture test warnings, so 'make test' is prettier

1.20150123 2015-01-22 America/Los_Angeles

 - enable lazy evaluation of SPF & DKIM (Ricardo Signes)
 - check ShareDir for mail-dmarc.ini, if not in a standard location
 - map DKIM status=invalid to status->temperror
 - add config arg to dmarc_update_public_suffix_list (Ricardo Signes)
 - Send only a single cc email (Marc Bradshaw)
 - DMARC: update docs to show SPF one-shot syntax
 - PurePerl: one shot accepts a Mail::DKIM::Verifier
 - trap errors thrown by is_dkim_aligned